# repo-example

./: LICENSE  README.md  setup.cfg  setup.py
src/repo_example/: cli.py  repo_example.py
tests/: test_repo_example.py
