
[metadata]
name = repo-example
version = 0.0.1
author = Manuela Kuhn
author_email = my_email@ovgu.de
description = A small project description.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT license
url = 'https://github.com/noesseltlab/repo_example'
project_urls =
    Bug Tracker = https://github.com/manuelakuhn/repo_template/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.6
install_requires =
	Click>=7.0
test_require =
	pytest>=3

[options.entry_points]
console_scripts =
    repo_example = repo_example.cli:main

[options.packages.find]
where=src
